--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
     <section></section>
 
     <div class="box"></div>
+    
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 </body>
 </html>
