--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Brøk Kalkulator</title>
+    <title>Kalkis - Kalkulator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img class="logo" src="Images/icons8-daylight-96 (2).png" alt="Logo">
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#">Brøk</a></li>
+                <li><a href="#">Prosent</a></li>
+                <li><a href="#">Lær</a></li>
+            </ul>
+        </nav>
+<a class="cta"href="#" > <button>Hjem</button></a>
+
+    </header>
+
+
     <h1>Fortnite</h1>
 </body>
 </html>
