--- a/info.html
+++ b/info.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Kalkulator</title>
+    <title>Kalkis - Info</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
+
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="Images/Untitled-1.png" alt="Logo"></a>
+
 
         <nav>
             <ul class="nav__links">
@@ -21,8 +23,5 @@
         </nav>
     <a class="cta" href="info.html"><button>Info</button></a>
     </header>
-    <h1>Kalkis - Brøk, Prosent gjort simpelt!</h1>
-<img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
-
 </body>
 </html>
