--- a/brok.html
+++ b/brok.html
@@ -4,25 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Kalkulator</title>
+    <title>Kalkis - Brøk Kalkulator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
+
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="Images/Untitled-1.png" alt="Logo"></a>
 
+
         <nav>
             <ul class="nav__links">
                 <li><a href="brok.html">Brøk</a></li>
                 <li><a href="prosent.html">Prosent</a></li>
-                <li><a href="ler.html'">Lær</a></li>
+                <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Info</button></a>
-    </header>
-    <h1>Kalkis - Brøk, Prosent gjort simpelt!</h1>
-<img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
+<a class="cta" href="info.html"><button>Info</button></a>
 
+    </header>
+
+
+    <h1>Brøk Kalkis!</h1>
+
+    <section></section>
+
+    <div class="box"></div>
+    
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 </body>
 </html>
