--- a/prosent.html
+++ b/prosent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Kalkulator</title>
+    <title>Kalkis - Prosent Kalkulator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
@@ -16,13 +16,27 @@
             <ul class="nav__links">
                 <li><a href="brok.html">Brøk</a></li>
                 <li><a href="prosent.html">Prosent</a></li>
-                <li><a href="ler.html'">Lær</a></li>
+                <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Info</button></a>
+<a class="cta" href="index.html"><button>Hjem</button></a>
+
     </header>
-    <h1>Kalkis - Brøk, Prosent gjort simpelt!</h1>
-<img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
+
+    <h1>Prosent Kalkis!</h1>
+
+    <section></section>
+
+    <div class="box"></div>
+    
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 
 </body>
 </html>
