--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Kalkis er en gratis og moderne side hvor du får hjelp med matte, hvis du sitter fast med prosent regning kan du bruke vår prosent kalkulator, eller hvis du sliter med noen brøk lekser, er vår moderne brøk kalkulator perfekt for deg.">
+    <meta name="KeyWords" content="Matte, Math, BrøkKalkulator, Brøk Kalkulator, ProsentKalkulator, Prosent Kalkulator, Norsk, Leksehjelp, Hjelp med lekser, leksehjelp matte, leksehjelp, brøk, prosent, brøk regning, prosent regning">
     <title>Kalkis - Kalkulator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
@@ -21,7 +23,8 @@
         </nav>
     <a class="cta" href="info.html"><button>Info</button></a>
     </header>
-    <h1>Kalkis - Brøk, Prosent gjort simpelt!</h1>
+    <h1>Kalkis - <span></span> Gjort Simpelt!</h1>
+    
 <img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
 
 </body>
