--- a/info.html
+++ b/info.html
@@ -23,5 +23,17 @@
         </nav>
     <a class="cta" href="info.html"><button>Info</button></a>
     </header>
+
+    <h1>Informasjon</h1>
+
+    <h2>Vårt Oppdrag</h2>
+    <h3>Kalkis.Net ble laget av to unge gutter, med et mål å gjøre brøk og prosent regning lettere for ungdommer, spesielt på vidregående og ungdomsskolen. Brøk var selv noe guttene slet med, og ville bare ha en halvveis moro og informativ vei til å få svarene dems.</h3>
+    
+    <h3>Selv om Kalkis gir deg svarende uten noe spesiell regning, oppfordrer vi alle som bruker nettsiden til å gå inn på vår lær side, og lære hvordan man gjør oppgavene innen matte. </h3>
+    <h3>Vi håper virkelig du som lærer, foreldre og spesiellt elev finner nytte i Kalkis.Net, og ikke bare få svaret, men å lære hvorfor du fikk det svaret du fikk.</h3>
+
+    <h2>Andre tjenester</h2>
+    <h3>Vi har også mange andre tjenester som er like simple, moderne og rett og slett fantastiske, her er noen av dem <a href="www.stoppeklokke.site">Stoppeklokke</a></h3>
+
 </body>
 </html>
