--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Kalkis er en gratis og moderne side hvor du får hjelp med matte, hvis du sitter fast med prosent regning kan du bruke vår prosent kalkulator, eller hvis du sliter med noen brøk lekser, er vår moderne brøk kalkulator perfekt for deg.">
     <meta name="KeyWords" content="Matte, Math, BrøkKalkulator, Brøk Kalkulator, ProsentKalkulator, Prosent Kalkulator, Norsk, Leksehjelp, Hjelp med lekser, leksehjelp matte, leksehjelp, brøk, prosent, brøk regning, prosent regning">
-    <title>Kalkis - Kalkulator</title>
+    <title>Kalkis - Matte Gjort Simpelt</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
@@ -26,6 +26,57 @@
     <h1>Kalkis - <span></span> Gjort Simpelt!</h1>
     
 <img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
+
+<!--FOOTER Start-->
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+            <h4>Ressuser</h4>
+            <ul>
+                <li><a href="brok.html">Brøk Kalkulator</a></li>
+                <li><a href="prosent.html">Prosent Kalkulator</a></li>
+                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
+                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Null</h4>
+            <ul>
+                <li><a href="innstilinger.html">Innstillinger</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Om Oss</h4>
+            <ul>
+                <li><a href="kontakt.html">Kontakt Oss</a></li>
+                <li><a href="vilkar.html">Vilkår for bruk</a></li>
+                <li><a href="personvern.html">Personvernerklæring</a></li>
+                <li><a href="info.html">Informasjon</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Sosiale Medier</h4>
+            <ul>
+                <a href="">FB</a>
+                <a href="">IG</a>
+                <a href="">GH</a>
+                <a href="">DC</a>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+    </div>
+</footer>
+
+<!--FOOTER END-->
+
 
 </body>
 </html>
