--- a/innstilinger.html
+++ b/innstilinger.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Lær Matte</title>
+    <title>Kalkis - Innstillinger</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="Images/Untitled-1.png" alt="Logo"></a>
 
-
         <nav>
             <ul class="nav__links">
                 <li><a href="brok.html">Brøk</a></li>
                 <li><a href="prosent.html">Prosent</a></li>
-                <li><a href="ler.html">Lær</a></li>
+                <li><a href="ler.html'">Lær</a></li>
             </ul>
         </nav>
-<a class="cta" href="info.html"><button>Info</button></a>
-
+    <a class="cta" href="info.html"><button>Info</button></a>
     </header>
+
+
+
+
+
     <!--FOOTER Start-->
 
 <footer class="footer">
@@ -34,7 +36,7 @@
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
                 <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+                <li><a href="prosent.html">ProsentLæring (fiks)</a></li>
             </ul>
         </div>
         <div class="footer-col">
