--- a/kontakt.html
+++ b/kontakt.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Lær Matte</title>
+    <title>Kalkis - Kontakt</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
 <body>
     <header>
@@ -34,7 +33,7 @@
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
                 <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+                <li><a href="prosent.html">ProsentLæring (fiks)</a></li>
             </ul>
         </div>
         <div class="footer-col">
@@ -70,7 +69,5 @@
 </div>
     </div>
 </footer>
-
-<!--FOOTER END-->
 </body>
 </html>
