--- a/info.html
+++ b/info.html
@@ -26,14 +26,65 @@
 
     <h1>Informasjon</h1>
 
-    <h2>Vårt Oppdrag</h2>
-    <h3>Kalkis.Net ble laget av to unge gutter, med et mål å gjøre brøk og prosent regning lettere for ungdommer, spesielt på vidregående og ungdomsskolen. Brøk var selv noe guttene slet med, og ville bare ha en halvveis moro og informativ vei til å få svarene dems.</h3>
+    <h4 class="informasjon">Vårt Oppdrag</h2>
+    <h4 class="informasjon">Kalkis.Net ble laget med mål å lage en simpel og lærerik kalkulator side, som spesialliserer i Brøk og Prosent regning, vi vil alltids også oppfordre brukerene våres til å <a class="informasjonLink" href="ler.html">lære</a> på våre sider, med mål og ikke trenge å bruke en Kalkis lengere.</h3>
     
-    <h3>Selv om Kalkis gir deg svarende uten noe spesiell regning, oppfordrer vi alle som bruker nettsiden til å gå inn på vår lær side, og lære hvordan man gjør oppgavene innen matte. </h3>
-    <h3>Vi håper virkelig du som lærer, foreldre og spesiellt elev finner nytte i Kalkis.Net, og ikke bare få svaret, men å lære hvorfor du fikk det svaret du fikk.</h3>
+    <h4 class="informasjon">Vi så det var mange som slet med Brøk og Prosent regning i Norge, og vi så også på at det ikke var en lett, simpel, og lærerik nettside hvor man kunne få informasjonen man ville ha. Vi har hovedfokus på å få Ungdomsskole, og vidregåendeelever.</h3>
+    <h4 class="informasjon">Vi håper virkelig du som er lærer, foresatt eller elev finner nytte i Kalkis.Net, og ikke bare få svaret, men å <a class="informasjonLink" href="ler.html">lære</a>  hvorfor du fikk det svaret du fikk.</h3>
 
-    <h2>Andre tjenester</h2>
-    <h3>Vi har også mange andre tjenester som er like simple, moderne og rett og slett fantastiske, her er noen av dem <a href="www.stoppeklokke.site">Stoppeklokke</a></h3>
+    <h2 class="informasjon">Andre tjenester</h2>
+    <h4 class="informasjon">Kalkis.Net var ikke Kalkis gruppen sitt første produkt, og kommer ikke til å bli det siste, tidligere har de jobbet på <a class="informasjonLink" href="www.stoppeklokke.site">Stoppeklokker</a.</h3>
 
+
+
+<!--FOOTER Start-->
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+            <h4>Ressuser</h4>
+            <ul>
+                <li><a href="brok.html">Brøk Kalkulator</a></li>
+                <li><a href="prosent.html">Prosent Kalkulator</a></li>
+                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
+                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Null</h4>
+            <ul>
+                <li><a href="innstilinger.html">Innstillinger</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+                <li><a href="">Null</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Om Oss</h4>
+            <ul>
+                <li><a href="kontakt.html">Kontakt Oss</a></li>
+                <li><a href="vilkar.html">Vilkår for bruk</a></li>
+                <li><a href="personvern.html">Personvernerklæring</a></li>
+                <li><a href="info.html">Informasjon</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Sosiale Medier</h4>
+            <ul>
+                <a href="">FB</a>
+                <a href="">IG</a>
+                <a href="">GH</a>
+                <a href="">DC</a>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+    </div>
+</footer>
+
+<!--FOOTER END-->
 </body>
 </html>
