--- a/personvern.html
+++ b/personvern.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Lær Matte</title>
+    <title>Kalkis - Personvern</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
 <body>
     <header>
@@ -70,7 +69,5 @@
 </div>
     </div>
 </footer>
-
-<!--FOOTER END-->
 </body>
 </html>
