--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav__links">
                 <li><a href="brok.html">Brøk</a></li>
                 <li><a href="prosent.html">Prosent</a></li>
-                <li><a href="ler.html'">Lær</a></li>
+                <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
     <a class="cta" href="info.html"><button>Info</button></a>
@@ -56,7 +56,7 @@
             <ul>
                 <li><a href="kontakt.html">Kontakt Oss</a></li>
                 <li><a href="vilkar.html">Vilkår for bruk</a></li>
-                <li><a href="personvern.html">Personvernerklæring</a></li>
+                <li><a href="vilkar.html">Personvernerklæring</a></li>
                 <li><a href="info.html">Informasjon</a></li>
             </ul>
         </div>
