--- a/prosent.html
+++ b/prosent.html
@@ -88,3 +88,11 @@
 <!--FOOTER END-->
 </body>
 </html>
+
+<script src="app.js"></script>
+
+form name="temperature_form" action="">
+    Convert Celsius to Fahrenheit:<br>
+    <input type="text" name="converterCtoF" id="converterCtoF"><br>
+    <input type="submit" value="Submit">
+</form>
