--- a/ler.html
+++ b/ler.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkis - Lær Matte</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ler.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
 </head>
 <body>
@@ -21,8 +22,12 @@
             </ul>
         </nav>
 <a class="cta" href="info.html"><button>Info</button></a>
-
     </header>
+
+
+
+
+
     <!--FOOTER Start-->
 
 <footer class="footer">
