Lære side og fikset span bug

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="Description" content="Kalkis er en gratis og moderne side hvor du får hjelp med matte, hvis du sitter fast med prosent regning kan du bruke vår prosent kalkulator, eller hvis du sliter med noen brøk lekser, er vår moderne brøk kalkulator perfekt for deg.">
     <meta name="KeyWords" content="Matte, Math, BrøkKalkulator, Brøk Kalkulator, ProsentKalkulator, Prosent Kalkulator, Norsk, Leksehjelp, Hjelp med lekser, leksehjelp matte, leksehjelp, brøk, prosent, brøk regning, prosent regning">
     <title>Kalkis - Matte Gjort Simpelt</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
+    <link rel="stylesheet" href="frontpage.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
         </nav>
     <a class="cta" href="info.html"><button>Info</button></a>
     </header>
-    <h1>Kalkis - <span></span> Gjort Simpelt!</h1>
+    <h1>Kalkis - <span class="FrontpageAnim"></span> Gjort Simpelt!</h1>
     
 <img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
 
