--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <h1>Kalkis - <span class="FrontpageAnim"></span> Gjort Simpelt!</h1>
     
-<img class="frontpage"src="Images/man-thinking-how-to-solve-math-problem-bearded-141188633.jpg" alt="">
+<img class="frontpage"src="Images\photo-1560785477-d43d2b34e0df.jpeg" alt="">
 
 <!--FOOTER Start-->
 
