--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis - Kontakt</title>
+    <title>Kalkis - Kontakt Oss</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +22,11 @@
 <a class="cta" href="info.html"><button>Info</button></a>
 
     </header>
+
+    <h1>Kontakt oss</h1>
+    <h3 class="centerText">Du kan kontakte oss på epost: <a href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=GTvVlcSGMSsVbFHLWqFlktggrvhfxmLDjXdCRTLLvPtNqlwFNdhCwlgZqKtWrkhFfPKsVfPMLsBKg">Kevinbjorvand@gmail.com</a> for hva enn det måtte være.</h3>
+
+
     <!--FOOTER Start-->
 
 <footer class="footer">
@@ -32,16 +37,17 @@
             <ul>
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="prosent.html">ProsentLæring (fiks)</a></li>
+                <li><a href="brokler.html">BrøkLæring</a></li>
+                <li><a href="prosentler.html">ProsentLæring</a></li>
+
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Null</h4>
+            <h4>Nettside</h4>
             <ul>
                 <li><a href="innstilinger.html">Innstillinger</a></li>
-                <li><a href="">Null</a></li>
-                <li><a href="">Null</a></li>
+                <li><a href="sitemap.xml">Nettsidekart</a></li>
+                <li><a href="ler.html">Læring</a></li>
                 <li><a href="">Null</a></li>
                 <li><a href="">Null</a></li>
             </ul>
@@ -51,7 +57,7 @@
             <ul>
                 <li><a href="kontakt.html">Kontakt Oss</a></li>
                 <li><a href="vilkar.html">Vilkår for bruk</a></li>
-                <li><a href="personvern.html">Personvernerklæring</a></li>
+                <li><a href="vilkar.html">Personvernerklæring</a></li>
                 <li><a href="info.html">Informasjon</a></li>
             </ul>
         </div>
