--- a/vilkar.html
+++ b/vilkar.html
@@ -25,7 +25,7 @@
 
 
 
-        <h1>Vikår for bruk</h1>
+        <h1>Vilkår for bruk</h1>
         <h3>1. AVTALE OM VILKÅR </h2>
             <h4 class="informasjon" >Disse bruksvilkårene utgjør en juridisk bindende avtale mellom deg, enten personlig eller på vegne av en enhet ("deg") og Kalkis.net AS ("Selskap", "vi", "oss" eller "vår"), angående din tilgang til og bruk av kalkis.net-nettstedet så vel som enhver annen medieform, mediekanal, mobilnettside eller mobilapplikasjon relatert, koblet til eller på annen måte koblet til disse (samlet "nettstedet"). Vi er registrert i Norge og har vårt forretningskontor på __________, __________. Du godtar at du ved å gå inn på nettstedet har lest, forstått og godtatt å være bundet av alle disse vilkårene for bruk. HVIS DU IKKE ER ENIG I ALLE DISSE BRUKSVILKÅRENE, SÅ ER DU UTTRYKKELIG FORBUD Å BRUKE NETTSTEDET, OG DU MÅ AVSLUTE BRUKEN UMIDDELBART.</h4>
         <h3>2. IMMATERIELLE EIENDOMSRETTER</h2>
@@ -115,16 +115,17 @@
             <ul>
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+                <li><a href="brokler.html">BrøkLæring</a></li>
+                <li><a href="prosentler.html">ProsentLæring</a></li>
+
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Null</h4>
+            <h4>Nettside</h4>
             <ul>
                 <li><a href="innstilinger.html">Innstillinger</a></li>
-                <li><a href="">Null</a></li>
-                <li><a href="">Null</a></li>
+                <li><a href="sitemap.xml">Nettsidekart</a></li>
+                <li><a href="ler.html">Læring</a></li>
                 <li><a href="">Null</a></li>
                 <li><a href="">Null</a></li>
             </ul>
