--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Info</button></a>
+    <a class="cta" href="Kalkis.html"><button>Kalkis</button></a>
     </header>
     <h1>Kalkis - <span class="FrontpageAnim"></span> Gjort Simpelt!</h1>
     
@@ -37,17 +37,17 @@
             <ul>
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="ler.html">ProsentLæring (fiks)</a></li>
+                <li><a href="brokler.html">BrøkLæring</a></li>
+                <li><a href="prosentler.html">ProsentLæring</a></li>
 
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Null</h4>
+            <h4>Nettside</h4>
             <ul>
                 <li><a href="innstilinger.html">Innstillinger</a></li>
-                <li><a href="">Null</a></li>
-                <li><a href="">Null</a></li>
+                <li><a href="sitemap.xml">Nettsidekart</a></li>
+                <li><a href="ler.html">Læring</a></li>
                 <li><a href="">Null</a></li>
                 <li><a href="">Null</a></li>
             </ul>
