--- a/prosentler.html
+++ b/prosentler.html
@@ -363,16 +363,17 @@
             <ul>
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                <li><a href="ler.html">BrøkLæring (fiks)</a></li>
-                <li><a href="prosent.html">ProsentLæring (fiks)</a></li>
+                <li><a href="brokler.html">BrøkLæring</a></li>
+                <li><a href="prosentler.html">ProsentLæring</a></li>
+
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Null</h4>
+            <h4>Nettside</h4>
             <ul>
                 <li><a href="innstilinger.html">Innstillinger</a></li>
-                <li><a href="">Null</a></li>
-                <li><a href="">Null</a></li>
+                <li><a href="sitemap.xml">Nettsidekart</a></li>
+                <li><a href="ler.html">Læring</a></li>
                 <li><a href="">Null</a></li>
                 <li><a href="">Null</a></li>
             </ul>
@@ -382,7 +383,7 @@
             <ul>
                 <li><a href="kontakt.html">Kontakt Oss</a></li>
                 <li><a href="vilkar.html">Vilkår for bruk</a></li>
-                <li><a href="personvern.html">Personvernerklæring</a></li>
+                <li><a href="vilkar.html">Personvernerklæring</a></li>
                 <li><a href="info.html">Informasjon</a></li>
             </ul>
         </div>
