--- a/innstilinger.html
+++ b/innstilinger.html
@@ -21,6 +21,16 @@
     <a class="cta" href="info.html"><button>Info</button></a>
     </header>
 
+    <div>
+        <input type="checkbox"
+    class="checkbox" id="checkbox">
+        <label for="checkbox" 
+        class="label">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
+    </div>
 
     <!--FOOTER Start-->
 
