--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
     </header>
 
     <h1>Kontakt oss</h1>
-    <h3 class="centerText">Du kan kontakte oss på epost: <a href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=GTvVlcSGMSsVbFHLWqFlktggrvhfxmLDjXdCRTLLvPtNqlwFNdhCwlgZqKtWrkhFfPKsVfPMLsBKg">Kevinbjorvand@gmail.com</a> for hva enn det måtte være.</h3>
+    <h3 class="centerText">Du kan kontakte oss på epost: <a class = "kebablink" href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=GTvVlcSGMSsVbFHLWqFlktggrvhfxmLDjXdCRTLLvPtNqlwFNdhCwlgZqKtWrkhFfPKsVfPMLsBKg">Kevinbjorvand@gmail.com</a> for hva enn det måtte være.</h3>
 
 
     <!--FOOTER Start-->
