--- a/innstilinger.html
+++ b/innstilinger.html
@@ -18,7 +18,7 @@
                 <li><a href="ler.html'">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Info</button></a>
+    <a class="cta" href="Kalkis.html"><button>Kalkis</button></a>
     </header>
 
     <div>
