--- a/Kalkis.html
+++ b/Kalkis.html
@@ -22,7 +22,7 @@
                 <li><a href="ler.html'">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Kalkis</button></a>
+    <a class="cta" href="Kalkis.html"><button>Kalkis</button></a>
     </header>
 
     <h1>Kalkis</h1>
