--- a/prosent.html
+++ b/prosent.html
@@ -19,7 +19,8 @@
                 <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-<a class="cta" href="index.html"><button>Info</button></a>
+<a class="cta" href="Kalkis.html"><button>Kalkis</button></a>
+
 
     </header>
 
