--- a/Kalkis.html
+++ b/Kalkis.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkis!</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="kalkis.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
 
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="Images/Untitled-1.png" alt="Logo"></a>
-
 
         <nav>
             <ul class="nav__links">
@@ -22,12 +21,12 @@
                 <li><a href="ler.html'">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button>Kalkis</button></a>
+    <a class="cta" href="info.html"><button></button></a>
     </header>
 
     <h1>Kalkis</h1>
 
-    <div class="container">
+    <div class="containerKalk">
         <div class="calculator dark">
             <div class="theme-toggler active">
                 <i class="toggler-icon"></i>
