--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Kalkis - Matte Gjort Simpelt</title>
     <link rel="icon" href="Images/icons8-fraction-96.png">
     <link rel="stylesheet" href="frontpage.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6346251131392677"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -21,7 +23,7 @@
                 <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="Kalkis.html"><button>Kalkis</button></a>
+    <a class="cta" href="Kalkis.html"><button class="KalkisButton">Kalkis</button></a>
     </header>
     <h1>Kalkis - <span class="FrontpageAnim"></span> Gjort Simpelt!</h1>
     
