--- a/Kalkis.html
+++ b/Kalkis.html
@@ -18,7 +18,7 @@
             <ul class="nav__links">
                 <li><a href="brok.html">Brøk</a></li>
                 <li><a href="prosent.html">Prosent</a></li>
-                <li><a href="ler.html'">Lær</a></li>
+                <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
     <a class="cta" href="info.html"><button></button></a>
