--- a/brokler.html
+++ b/brokler.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="lær, ler, lær brøk, ler brok, lær brøk lett, lær matte brøk">
+    <meta name="description" content="Lær brøk lett og moro, med vår moderne og gratis nettside, hvor du kan lære brøk i null tid, og bli motivert. Perfekt for skoleelever som trenger hjelp med brøken.">
     <title>Kalkis - Lær!</title>
     <link rel="stylesheet" href="ler.css">
 
