--- a/intro.html
+++ b/intro.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="intro, læring, ler matte, lær matte, matte læring, ungdomsskole matte, matte, brøk, prosent">
+    <meta name="description" content="Hvis du trenger et sted å starte med å lære matte, spesielt prosent og brøk, trenger du ikke se vidre, Kalkis er en perfekt lære side, og kalkulator (kalkis) side, med spessielle kalkiser og lære ressuser">
     <title>Kalkis - Lær!</title>
     <link rel="stylesheet" href="ler.css">
 </head>
