--- a/prosent.html
+++ b/prosent.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="prosent, prosent kalkulator, prosent kalkulator økning, prosent kalkulator nedgang, prosent, kalkis, gratis prosent kalkulator">
+    <meta name="description" content="Gratis, avansert, simpel og fantastisk - Her er den beste prosent kalkulatoren du kan ønske deg">
     <title>Kalkis - Prosent Kalkulator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
