--- a/Kalkis.html
+++ b/Kalkis.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkis!</title>
+    <meta name="keywords" content="Kalkulator, Kalkis, Kalkis Kalkulator, Regning, Simpel kalkulator, lett kalkulator, lett kalkis, gratis kalkulator, kalkulator gratis, gratis kakis">
+    <meta name="description" content="Her har vi den kalkulatoren med det beste utseende i Norge, med spesiall funksjoner for prosent og brøk regning, men viktigst, en vanlig, og simpel kalkis">
+    <title>Kalkis - Kalkulator!</title>
     <link rel="stylesheet" href="kalkis.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
@@ -21,7 +23,7 @@
                 <li><a href="ler.html">Lær</a></li>
             </ul>
         </nav>
-    <a class="cta" href="info.html"><button></button></a>
+    <a class="cta" href="Kalkis.html"><button></button></a>
     </header>
 
     <h1>Kalkis</h1>
