--- a/annetler.html
+++ b/annetler.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Kalkis, lær, Kalkulator, Læring, Lær Matte, Lær Brøk, Lær Prosent, Lær annet, Annet Kalkis">
+    <meta name="description" content="Annet siden er for Kalkis lærere som ønsker å gå mer avanserte og alternative oppgaver enn de vanlige brøk og prosent oppgavene vi vanligvis bruker.">
     <title>Kalkis - Lær!</title>
     <link rel="stylesheet" href="ler.css">
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="Images/Untitled-1.png" alt="Logo"></a>
-
 
         <nav>
             <ul class="nav__links">
