--- a/brok.html
+++ b/brok.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Brok Kalkulator, brøk kalkulator, brøk, kalkulator brøk, kalkulator brok, lett brøk kalkulator">
+    <meta name="description" content="Hvis du trenger en brøk kalkulator, ikke se lengre, moderne, simpel, og moro brøk kalkulator, med alle mulige måter regning.">
     <title>Kalkis - Brøk Kalkulator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Images/icons8-fraction-96.png">
