--- a/prosentler.html
+++ b/prosentler.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="prosent, lær prosent, ler prosent, kalkis, prosent kalkis, prosent gratis, lær gratis, matte, mattematikk læring">
+    <meta name="description" content="Sliter du med prosent, eller trenger du en prosent kalkulator, men sammtidig kunne trengt å lære hvordan du regning ut prosent på ulike måter, trykk deg inn her.">
     <title>Kalkis - Lær!</title>
     <link rel="stylesheet" href="ler.css">
 </head>
