--- a/vilkar.html
+++ b/vilkar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="vilkår for bruk Kalkis, Kalkis, vilkår for bruk, VFB, Terms of service">
+    <meta name="description" content="Dette er hva du sier ja til når du bruker Kalkis.net.">
     <title>Kalkis - Vilkår For Bruk</title>
     <link rel="stylesheet" href="style.css">
 </head>
