--- a/annetler.html
+++ b/annetler.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Kalkis, lær, Kalkulator, Læring, Lær Matte, Lær Brøk, Lær Prosent, Lær annet, Annet Kalkis">
     <meta name="description" content="Annet siden er for Kalkis lærere som ønsker å gå mer avanserte og alternative oppgaver enn de vanlige brøk og prosent oppgavene vi vanligvis bruker.">
     <title>Kalkis - Lær!</title>
+    <link rel="icon" href="Images/icons8-fraction-96.png">
     <link rel="stylesheet" href="ler.css">
 </head>
 <body>
