--- a/brokler.html
+++ b/brokler.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Lær brøk lett og moro, med vår moderne og gratis nettside, hvor du kan lære brøk i null tid, og bli motivert. Perfekt for skoleelever som trenger hjelp med brøken.">
     <title>Kalkis - Lær!</title>
     <link rel="stylesheet" href="ler.css">
+    <link rel="icon" href="Images/icons8-fraction-96.png">
 
 </head>
 <body>
