--- a/prosentler.html
+++ b/prosentler.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="prosent, lær prosent, ler prosent, kalkis, prosent kalkis, prosent gratis, lær gratis, matte, mattematikk læring">
     <meta name="description" content="Sliter du med prosent, eller trenger du en prosent kalkulator, men sammtidig kunne trengt å lære hvordan du regning ut prosent på ulike måter, trykk deg inn her.">
     <title>Kalkis - Lær!</title>
+    <link rel="icon" href="Images/icons8-fraction-96.png">
     <link rel="stylesheet" href="ler.css">
 </head>
 <body>
