--- a/vilkar.html
+++ b/vilkar.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="vilkår for bruk Kalkis, Kalkis, vilkår for bruk, VFB, Terms of service">
     <meta name="description" content="Dette er hva du sier ja til når du bruker Kalkis.net.">
     <title>Kalkis - Vilkår For Bruk</title>
+    <link rel="icon" href="Images/icons8-fraction-96.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
