--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <ul>
                 <li><a href="brok.html">Brøk Kalkulator</a></li>
                 <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                <li><a href="brokler.html">BrøkLæring</a></li>
-                <li><a href="prosentler.html">ProsentLæring</a></li>
+                <li><a href="brokler.html">Brøk Læring</a></li>
+                <li><a href="prosentler.html">Prosent Læring</a></li>
 
             </ul>
         </div>
@@ -49,9 +49,9 @@
             <ul>
                 <li><a href="innstilinger.html">Innstillinger</a></li>
                 <li><a href="sitemap.xml">Nettsidekart</a></li>
+                <li><a href="Kalkis.html">Kalkulator</a></li>
                 <li><a href="ler.html">Læring</a></li>
-                <li><a href="">Null</a></li>
-                <li><a href="">Null</a></li>
+                <li><a href="">Profil</a></li>
             </ul>
         </div>
         <div class="footer-col">
@@ -64,12 +64,9 @@
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Sosiale Medier</h4>
+            <h4>Vårt oppdrag</h4>
             <ul>
-                <a href="">FB</a>
-                <a href="">IG</a>
-                <a href="">GH</a>
-                <a href="">DC</a>
+                <h3>Vi ønsker å skape en lett måte å finne svaret på ting, sammtidig som vi oppfordrer alle til å lære hvordan de kan regne ut selv.</h3>
 
             </ul>
         </div>
