--- a/brok.html
+++ b/brok.html
@@ -186,7 +186,7 @@
                   <td><input type="text" size="2" name="Ad" id="Ad" readonly="1"></td>
                 </tr>
               </table>
-            <br><input type="checkbox" name="reduce" id="reduce" checked> Reduser
+            <br><input type="checkbox" name="reduce" id="reduce" checked> Forkort
           </form>
           </td>
         </tr>
