--- a/brok.html
+++ b/brok.html
@@ -160,9 +160,9 @@
     <table class="box">
         <tr>
           <td align="center" valign="middle">
-            <h3>Brøk Kalkulator</h3>
+            <h2>Brøk Kalkulator<h2>
             <form name="calc">
-              <table width="150" border="0" cellspacing="0" cellpadding="0">
+              <table width="400" border="0" cellspacing="" cellpadding="1">
                 <tr>
       
                   <td style="border-bottom:2px #000000 solid;"><input type="text" size="2"  name="n1" id="n1" tabindex="1"></td>
