small fix with " ÷"

--- a/brok.html
+++ b/brok.html
@@ -171,7 +171,7 @@
                     <option value="+">+</option>
                     <option value="-">-</option>
                     <option value="*">x</option>
-                    <option value="/">:</option>
+                    <option value="/">÷</option>
       
                     </select>
                   </td>
