--- a/brok.html
+++ b/brok.html
@@ -170,8 +170,8 @@
                     <select name="Op" tabindex="3">
                     <option value="+">+</option>
                     <option value="-">-</option>
-                    <option value="*">x</option>
-                    <option value="/">Ã·</option>
+                    <option value="*">*</option>
+                    <option value="/">/</option>
       
                     </select>
                   </td>
