--- a/prosent.html
+++ b/prosent.html
@@ -51,9 +51,8 @@
          }
         //-->
         </SCRIPT>
-        
         <FORM name=form1 method="post">
-        <TABLE cellSpacing=1 cellPadding=1 border=1>
+        <table class="box" cellSpacing=1 cellPadding=1 border=1>
           <TBODY>
           <TR>
             <TD align=middle colSpan=3><B><FONT size=5>Prosent Kalkulator</FONT></B> 
@@ -81,7 +80,6 @@
             <TD align=middle 
         colSpan=3><INPUT type=reset value=Nullstill></TD></TR></TBODY></TABLE></FORM>    
             </form>
-    <div class="box"></div>
     
 
 <!--FOOTER Start-->
