--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <li><a href="sitemap.xml">Nettsidekart</a></li>
                 <li><a href="Kalkis.html">Kalkulator</a></li>
                 <li><a href="ler.html">Læring</a></li>
-                <li><a href="">Profil</a></li>
+                <li><a href="profil.html">Profil</a></li>
             </ul>
         </div>
         <div class="footer-col">
