--- a/profil.html
+++ b/profil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="650202676248-6t126brkqb3nbc4rmnr2hprgngeproae.apps.googleusercontent.com.googleusercontent.com">
+    <meta name="google-signin-client_id" content="650202676248-6t126brkqb3nbc4rmnr2hprgngeproae.apps.googleusercontent.com">
     <title>Kalkis -profil (TEST)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -37,11 +37,9 @@
         <p>Profile Pic</p>
         <img id="image" class="rounded-circle" width="100" height="100">
         <p>Email</p>
-        <p id="email"></p>
+        <p id="email" class="alert alert-danger"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
-
-
 
 
     <footer class="footer">
