--- a/profil.html
+++ b/profil.html
@@ -28,7 +28,7 @@
 <a class="cta" href="info.html"><button>Info</button></a>
 
     </header>
-    <h2 class="alert alert-primary">Sign in with Google</h2>
+    <h2 class="alert alert-primary">Sign in with Google!</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <div class="data">
