--- a/profil.html
+++ b/profil.html
@@ -7,7 +7,7 @@
     <meta name="google-signin-client_id" content="650202676248-6t126brkqb3nbc4rmnr2hprgngeproae.apps.googleusercontent.com">
     <title>Kalkis -profil (TEST)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="profil.css">
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
     </div>
 
 
-    <footer class="footer">
+    <!--<footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col">
@@ -85,6 +85,6 @@
     </div>
     </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
