--- a/profil.html
+++ b/profil.html
@@ -9,11 +9,11 @@
     <title>Sign In With Google Using JavaScript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="profil.css">
 </head>
 
 <body>
-    <h2 class="alert alert-success">Sign-In With Google Using JavaScript!</h2>
+    <h2 class="alert alert-success">Sign-In With Google Using JavaScript</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <div class="data">
@@ -26,57 +26,12 @@
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
 
-    <script src="index.js" async defer></script>
+    <script src="profil.js" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
-    <!--<footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                <h4>Ressuser</h4>
-                <ul>
-                    <li><a href="brok.html">Brøk Kalkulator</a></li>
-                    <li><a href="prosent.html">Prosent Kalkulator</a></li>
-                    <li><a href="brokler.html">Brøk Læring</a></li>
-                    <li><a href="prosentler.html">Prosent Læring</a></li>
-    
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Nettside</h4>
-                <ul>
-                    <li><a href="innstilinger.html">Innstillinger</a></li>
-                    <li><a href="sitemap.xml">Nettsidekart</a></li>
-                    <li><a href="Kalkis.html">Kalkulator</a></li>
-                    <li><a href="ler.html">Læring</a></li>
-                    <li><a href="">Profil</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Om Oss</h4>
-                <ul>
-                    <li><a href="kontakt.html">Kontakt Oss</a></li>
-                    <li><a href="vilkar.html">Vilkår for bruk</a></li>
-                    <li><a href="vilkar.html">Personvernerklæring</a></li>
-                    <li><a href="info.html">Informasjon</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Vårt oppdrag</h4>
-                <ul>
-                    <h3>Vi ønsker å skape en lett måte å finne svaret på ting, sammtidig som vi oppfordrer alle til å lære hvordan de kan regne ut selv.</h3>
-    
-                </ul>
-            </div>
-        </div>
-    </div>
-    </div>
-        </div>
-    </footer> -->
 </body>
 </html>
