--- a/profil.html
+++ b/profil.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h2 class="alert alert-success">Sign-In With Google Using JavaScript!</h2>
+    <h2 class="alert alert-success">Sign-In With Google Using JavaScript</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <div class="data">
@@ -31,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
+
 </html>
