--- a/profil.html
+++ b/profil.html
@@ -13,16 +13,16 @@
 </head>
 
 <body>
-    <h2 class="alert alert-success">Sign-In With Google Using JavaScript!</h2>
+    <h2 class="alert alert-primary">Sign-In With Google Using JavaScript!</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <div class="data">
         <p>Name</p>
-        <p id="name"></p>
+        <p id="name" class="alert alert-success"></p>
         <p>Image</p>
         <img id="image" class="rounded-circle" width="100" height="100" />
         <p>Email</p>
-        <p id="email"></p>
+        <p id="email" class="alert alert-danger"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
 
@@ -31,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
