--- a/prosent.html
+++ b/prosent.html
@@ -64,7 +64,7 @@
                                         placeholder="det hele tallet"
               >?</TD>
               <TD><INPUT onclick=perc1() type=button value= = ></TD>
-            <TD>Svar: <INPUT maxLength=40 size=5 name=total1></TD>
+            <TD>Svar: <INPUT readonly="1" maxLength=40 size=5 name=total1></TD>
             
           <TR>
             <TD><INPUT size=5 name=c
@@ -74,7 +74,7 @@
               >?</TD>
             <form action=""></form>
             <TD><INPUT onclick=perc2() type=button value= = ></TD>
-            <TD>Svar: <INPUT size=5 name=total2> %</TD>
+            <TD>Svar: <INPUT readonly="1" size=5 name=total2> %</TD>
             
           <TR>
             <TD align=middle 
