--- a/brok.html
+++ b/brok.html
@@ -187,6 +187,7 @@
                 </tr>
               </table>
             <br><input type="checkbox" name="reduce" id="reduce" checked> Forkort
+            <button type=reset value="Nullstill">Nullstill</button>
           </form>
           </td>
         </tr>
